# atomistic-simulation-tutorial

./: README.md
docs/: Makefile  README.md  conf.py  pyproject.toml
docs/_static/: 1_1_welcome.ipynb
docs/_static/css/: cookie-consent.css  custom.css
docs/_static/js/: cookie-consent-init.umd.js  cookie-consent.umd.js  external-link.js
docs/_templates/: header.html  layout.html
docs/misc/: split_notebook.py
docs/tutorials/en/: 1_1_welcome.nblink  1_2_atomistic_simulation_intro.nblink  1_3_ase_basic.nblink  1_4_ase_structure.nblink  1_5_ase_calculator.nblink  1_6_ase_playground.nblink  1_7_ase_playground2.nblink  1_8_diatomic_potential.nblink  2_1_opt.nblink  2_2_opt_symmetry.nblink  2_3_opt-algorithm.nblink  3_1_bulk_energy.nblink  3_2_slab_energy.nblink  3_3_slab_adsorption_energy.nblink  3_4_nanoparticle.nblink  3_5_nanoparticle_advanced.nblink  4_1_vibration.nblink  4_2_phonon.nblink  5_1_neb_basic.nblink  5_2_neb_catalyst.nblink  6_1_md-nve.nblink  6_2_md-nvt.nblink  6_3_md-npt.nblink  7_1_conclusion.nblink  Appendix_1_visualization.nblink  Appendix_2_opt-convergence.nblink  conf.py  index.rst
docs/tutorials/ja/: 1_1_welcome.nblink  1_2_atomistic_simulation_intro.nblink  1_3_ase_basic.nblink  1_4_ase_calculator.nblink  1_4_ase_structure.nblink  1_5_ase_calculator.nblink  1_5_ase_playground.nblink  1_6_ase_playground.nblink  1_6_diatomic_potential.nblink  1_7_ase_playground2.nblink  1_8_diatomic_potential.nblink  2_1_opt.nblink  2_2_opt-algorithm.nblink  2_2_opt_symmetry.nblink  2_3_opt-algorithm.nblink  3_1_bulk_energy.nblink  3_2_slab_energy.nblink  (+15 more)
(+69 files in other folders)
